--- a/slides/_metadata.yml
+++ b/slides/_metadata.yml
@@ -8,6 +8,7 @@ format:
     transition: fade
     slide-number: true
     chalkboard: true
+    highlight-style: a11y-dark
 editor: visual
 execute:
   freeze: auto
